fix: 修复编译问题